--- a/index.html
+++ b/index.html
@@ -41,50 +41,56 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>The HTML Presentation Framework</h3>
+					<h1>BEM Basics</h1>
+					<h3>Why and how to use BEM method for writing CSS.</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>Created by <a href="http://github.com/noudilus">Arnoud van der Velden</a> / <a href="http://twitter.com/noudjes">@noudjes</a></small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
+					<h2>BEM?</h2>
 					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
+						A method to write reusable, scalable, maintainable and fast CSS code. Created by Yandex Developers.
 					</p>
 				</section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
-						<h2>Vertical Slides</h2>
-						<p>Slides can be nested inside of each other.</p>
-						<p>Use the <em>Space</em> key to navigate through all slides.</p>
-						<br>
-						<a href="#" class="navigate-down">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>That's it, time to go back up.</p>
-						<br>
-						<a href="#/2">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="transform: rotate(180deg); -webkit-transform: rotate(180deg);">
-						</a>
+						<h2>
+							<strong>B</strong>lock - <strong>E</strong>lement - <strong>M</strong>odifier
+						</h2>
+						<p>A way to write modular CSS</p>
+						<p>Forces to think about structure</p>
+						<p>Model for markup, style and UX</p>
 					</section>
 				</section>
 
 				<section>
-					<h2>Slides</h2>
-					<p>
-						Not a coder? Not a problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slides.com" target="_blank">http://slides.com</a>.
-					</p>
+					<section>
+						<h2>How it works</h2>
+					</section>
+					<section>
+						<h2>Block</h2>
+						<p>Independant reusable part of your interface</p>
+						<p>Contains elements and other blocks</p>
+						<blockquote>Not to be confused with HTML blocks</blockquote>
+					</section>
+					<section>
+						<h2>Element</h2>
+						<p>Belongs to a Block</p>
+						<p>Can contain blocks or other elements</p>
+						<p>Can contain Modifiers</p>
+					</section>
+					<section>
+						<h2>Modifier</h2>
+						<p>Can be applied to Block or Element</p>
+						<p>Most difficult part to understand</p>
+					</section>
+					<section>
+
+					</section>
 				</section>
 
 				<section>
